--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <script src="https://upload-widget.cloudinary.com/latest/global/all.js" type="text/javascript"></script>
+    <script src="https://product-gallery.cloudinary.com/latest/all.js" type="text/javascript"></script>
+    <!-- <script src="https://upload-widget.cloudinary.com/latest/global/all.js" type="text/javascript"></script>
+    <script src="https://media-library.cloudinary.com/global/all.js" type="text/javascript"></script> -->
+    
+     <!-- <script src="https://product-gallery.cloudinary.com/latest/all.js" type="text/javascript">  
+     </script> -->
+    <title>Work Buddy</title>
   </head>
   <body>
     <div id="root"></div>
