--- a/client/index.html
+++ b/client/index.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    
+
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://upload-widget.cloudinary.com/latest/global/all.js" type="text/javascript"></script>
-    <script src="https://product-gallery.cloudinary.com/latest/all.js" type="text/javascript"></script>
-    <!-- <script src="https://upload-widget.cloudinary.com/latest/global/all.js" type="text/javascript"></script>
-    <script src="https://media-library.cloudinary.com/global/all.js" type="text/javascript"></script> -->
-    
-     <!-- <script src="https://product-gallery.cloudinary.com/latest/all.js" type="text/javascript">  
-     </script> -->
+    <script src="https://widget.cloudinary.com/v2.0/global/all.js"></script>
+
+
     <title>Work Buddy</title>
   </head>
   <body>
