--- a/client/index.html
+++ b/client/index.html
@@ -2,19 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-
-
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://upload-widget.cloudinary.com/latest/global/all.js" type="text/javascript"></script>
-    <script src="https://widget.cloudinary.com/v2.0/global/all.js"></script>
-
-
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <title>Work Buddy</title>
+
+    <!-- Cloudinary Scripts -->
+    <script src="https://upload-widget.cloudinary.com/latest/global/all.js" type="text/javascript" defer></script>
+    <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript" defer></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx" defer></script>
   </body>
 </html>
+
